--- a/src/main/resources/static/html/css.css
+++ b/src/main/resources/static/html/css.css
@@ -130,7 +130,29 @@ body {
 	background-color: #1A1A1A;
 	border-radius: 1px;
 }
-
+.secondary-content input{
+	padding: 13px 20px;
+	margin: 3px;
+	padding-left: 55px;
+	height: 48px;
+	width: 100%;
+	font-weight: 500;
+	border-radius: 10px;
+	font-size: 14px;
+	line-height: 22px;
+	letter-spacing: 0.5px;
+	outline: none;
+	color: #c4c3ca;
+	background-color: transparent;
+	border: none;
+	-webkit-transition: all 200ms linear;
+	transition: all 200ms linear;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.secondary-content input:hover{
+	transform: translateY(-2px);
+	background-color: #1A1A1A;
+}
 .send{
 	font-size: 23px;
 	padding: 3%;
@@ -402,7 +424,8 @@ body {
 	color: #fff;
 }
 .add-button{
-	
+	position: absolute;
+	width: 405px;
 	border: 2px solid #1A1A1A;
 	border-radius: 15px;
 	box-sizing: border-box;
@@ -416,7 +439,7 @@ body {
 }
 .add-button:hover{
 	background-color: #e8f7c8;
-	transform: translateY(-10px);
+	transform: translateY(-3px);
 	color: #000000;
 }
 .page-tittle-files{
@@ -424,7 +447,8 @@ body {
 	color: #45ffbc;
 }
 .add-button-files{
-		
+	position: absolute;	
+	width: 405px;
 	border: 2px solid #1A1A1A;
 	border-radius: 15px;
 	box-sizing: border-box;
@@ -437,7 +461,7 @@ body {
 	
 }
 .add-button-files:hover{
-	transform: translateY(-10px);
+	transform: translateY(-3px);
 	color: #000000;
 	background-color: #9bf9d6;
 }
@@ -585,3 +609,4 @@ body {
 	transform: translateY(-5px);
 	color: #fffbfb;
 }
+
